@@ -180,7 +180,8 @@ L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
-BSD license.
+ © 2013-2015 Michal Špaček
+ BSD 2-Clause License
 
 =head1 VERSION
 
