@@ -94,7 +94,8 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    BSD license.
+     © 2013-2015 Michal Špaček
+     BSD 2-Clause License
 
 VERSION
     0.05
